--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,7 @@ name = "template-python-env"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "fernando-peres", email = "fernando.peres@icloud.com" }
-]
+authors = [{ name = "fernando-peres", email = "fernando.peres@icloud.com" }]
 requires-python = ">=3.13"
 dependencies = []
 
@@ -16,11 +14,33 @@ packages = ["src"]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-
-
 [dependency-groups]
-lint = [
-    "black>=25.1.0",
-    "mypy>=1.16.1",
-    "ruff>=0.12.0",
+dev = [
+    "pre-commit>=4.2.0",
 ]
+lint = ["mypy>=1.16.1", "ruff>=0.12.0"]
+
+# ****************************************************************************************
+# Formatting, Linting, Type Checking, Import Sorting
+# ****************************************************************************************
+
+[tool.ruff]
+line-length = 98
+target-version = "py313"
+fix = true
+lint.select = ["E", "F", "B", "I"]
+
+[tool.ruff.format]
+docstring-code-line-length = 88
+quote-style = "double"
+skip-magic-trailing-comma = false
+
+
+[tool.mypy]
+python_version = "3.13"
+strict = true
+exclude = ["(list|create)/bin", "^(\\.venv|env|venv|list|create)/"]
+ignore_missing_imports = true
+explicit_package_bases = true
+mypy_path = "src"
+disable_error_code = ["misc"]
