--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = [
-    "pre-commit>=4.2.0",
-]
+dev = ["pre-commit>=4.2.0"]
 lint = ["mypy>=1.16.1", "ruff>=0.12.0"]
 
 # ****************************************************************************************
@@ -28,13 +26,28 @@ lint = ["mypy>=1.16.1", "ruff>=0.12.0"]
 line-length = 98
 target-version = "py313"
 fix = true
-lint.select = ["E", "F", "B", "I"]
+exclude = [".venv", "build", "dist", "__pypackages__"]
+src = ["src", "tests"]
+
 
 [tool.ruff.format]
+indent-style = "space"
 docstring-code-line-length = 88
+docstring-code-format = true
 quote-style = "double"
 skip-magic-trailing-comma = false
 
+
+[tool.ruff.lint]
+select = ["E", "F", "B", "I"]
+extend-select = [
+    "UP",  # pyupgrade rules
+    "SIM", # simplify rules
+    "C90", # mccabe complexity checks
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["main_lib", "main"]
 
 [tool.mypy]
 python_version = "3.13"
