--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["pre-commit>=4.2.0"]
-lint = ["mypy>=1.16.1", "ruff>=0.12.0"]
+dev = []
+lint = ["mypy>=1.16.1", "pre-commit>=4.2.0", "ruff>=0.12.0"]
 
 # ****************************************************************************************
 # Formatting, Linting, Type Checking, Import Sorting
